--- a/content/HW3.html
+++ b/content/HW3.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='Final.html'>Final</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li><a href='期末作業.html'>期末作業</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='Final.html'>Final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -169,7 +169,6 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6pJBPPrDO40" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VGkcmBaeAGM" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://github.com/mdecourse/snake-ai-pytorch">https://github.com/mdecourse/snake-ai-pytorch</a></p>
-<p></p>
 <br />W10 << <a href='W10.html'>Previous</a> <a href='初階貪吃蛇.html'>Next</a> >> 初階貪吃蛇</div>
         
     <!-- footer -->
